--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,36 @@
+body {
+  background-color: #222;
+}
+
+h1 {
+  margin: 0 0 10px;
+  padding: 0;
+  font-size: 17px;
+  color: #aaa;
+}
+
+#tools {
+  float: left;
+  width: 200px;
+  background: #aaa;
+  border: 1px solid silver;
+  border-radius: 5px;
+  margin-right: 20px;
+}
+
+#mainCanvasContainer {
+  padding: 10px;
+  border-radius: 5px;
+  background: #444;
+  margin-left: 230px;
+}
+
 canvas {
-    border:1px solid silver;
-    width:80%;
-    height: 80%;
+    border: 1px solid silver;
+    width: 100%;
+    height: 100%;
+}
+
+canvas.ondragover {
+  border: 1px solid #f00;
 }
