--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,53 @@
 body {
-  background-color: #222;
+    background-color: #222;
 }
 
 h1 {
-  margin: 0 0 10px;
-  padding: 0;
-  font-size: 17px;
-  color: #aaa;
+    margin: 0 0 10px;
+    padding: 0;
+    font-size: 17px;
+    color: #aaa;
 }
 
 #tools {
-  float: left;
-  width: 200px;
-  background: #aaa;
-  border: 1px solid silver;
-  border-radius: 5px;
-  margin-right: 20px;
+    float: left;
+    width: 200px;
+    background: #aaa;
+    border: 1px solid silver;
+    border-radius: 5px;
+    margin-right: 20px;
 }
 
 #mainCanvasContainer {
-  padding: 10px;
-  border-radius: 5px;
-  background: #444;
-  margin-left: 230px;
+    padding: 10px;
+    border-radius: 5px;
+    background: #444;
+    margin-left: 230px;
+    position: relative;
 }
 
-canvas {
+#mainCanvas {
     border: 1px solid silver;
     width: 100%;
     height: 100%;
 }
 
+#markings {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 100%;
+    height: 100%;
+}
+
 canvas.ondragover {
-  border: 1px solid #f00;
+    border: 1px solid #f00;
+}
+
+.marking {
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    border: 1px solid red;
+    border-radius: 5px;
 }
