--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,15 @@ h1 {
     margin-right: 20px;
 }
 
+
+label {
+    display: block;
+}
+
+input {
+    width: 90%;
+}
+
 #mainCanvasContainer {
     padding: 10px;
     border-radius: 5px;
@@ -26,16 +35,25 @@ h1 {
     position: relative;
 }
 
+#mainCanvasContainer2 {
+    position: relative;
+}
+
 #mainCanvas {
-    border: 1px solid silver;
     width: 100%;
-    height: 100%;
+}
+
+#filteredCanvas {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
 }
 
 #markings {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 0px;
+    left: 0px;
     width: 100%;
     height: 100%;
 }
