--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,9 @@ label[for="yellowMarking"] {
     color: yellow;
 }
 
-
-label.range {
+label.rangeLabel {
     display: block;
+    clear: left;
 }
 
 input[type="range"] {
@@ -80,7 +80,7 @@ canvas.ondragover {
     height: 10px;
     background: red;
     border-radius: 5px;
-    cursor: move;
+    /*cursor: move;*/
 }
 
 .markingType0 {
@@ -90,3 +90,53 @@ canvas.ondragover {
 .markingType1 {
     background: yellow;
 }
+
+
+/* -------------------------- Slider ---------------------- */
+
+/* slider root */
+.slider {
+    background:url(../images/small-horizontal.png) no-repeat  0 -5px;
+    width:94px;
+    height:5px;
+    cursor:pointer;
+    position: relative;
+    margin: 10px 0;
+}
+
+/* drag handle */
+.handle {
+    background:transparent url(../images/small-horizontal.png) no-repeat scroll -97px 0;
+    height:13px;
+    position:absolute;
+    top:-5px;
+    width:12px;
+    cursor:move;
+}
+
+/* input field */
+.range {
+    font-size:10px;
+    border:0;
+    background:none;
+    width: 30px;
+    margin:-5px 0 10px 0;
+    color:#fff;
+    text-align:center;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+}
+
+/* input field while focused */
+.range:focus {
+    background-color:#000;
+}
+
+/* cute little CSS3 selector */
+.range[readonly]:focus {
+    background-color:transparent;
+}
+
+
+
+
